# treedump

./: .gitignore  README.md  dump.txt  pyproject.toml
treedump/: cli.py
treedump.egg-info/: PKG-INFO  SOURCES.txt
