[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "treedump"
version = "0.1.0"
description = "Dump all text files in a directory tree into a single file"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Your Name" }
]
dependencies = []

[project.scripts]
treedump = "treedump.cli:main"
